--- a/doc/h5/h5基础.md
+++ b/doc/h5/h5基础.md
@@ -12,7 +12,6 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-touch-fullscreen" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="format-detection" content="telephone=no">
 <meta name="x5-fullscreen" content="true">//
 //禁用自动识别页面中的电话号码
 <meta name="format-detection" content="telephone=no">
@@ -21,3 +20,61 @@
 //不使用缓存
 <meta http-equiv="Cache-Control" content="no-cache" />
 ```
+
+#### viewport
+* 自定义虚拟窗口
+```
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+width：设置 layout viewport 宽度
+initial-scale：初始缩放值
+minimum-scale：最小缩放值
+maximum-scale：最大缩放值
+height：设置 layout viewport 高度
+user-scalable：是否允许用户缩放 no|yes
+```
+
+#### 媒体查询
+```
+用法：<link media="only screen and (max-width:480px)" href="./style/mobile.css">
+语法：@media [media_query] media_type and media_feature
+media_query：查询关键字 not|only
+media_type：指定设备类型 all（所有设备）screen（显示器、笔记本、移动端）
+media_feature：定义CSS中的设备特性
+```
+
+#### 启动原生应用
+```
+<a href="http://maps.google.com/mapsq=cupertino>点击启动谷歌地图</a>
+```
+
+#### 全屏模式
+```
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-startup-image" href="../images/loading.jpg">//ios
+```
+
+#### h5新特性
+* 语义特性
+* CSS3特性
+* 设备兼容特性
+    * 获取位置信息
+    * 实时显示地理位置
+    * 设备横竖屏
+* 网页多媒体特性
+    * 音频
+    * 视频
+* 离线应用与本地存储特性
+    * appcache
+    * web storage
+    * indexed database
+    * web sql database
+* 性能与集成特性
+    * web workers
+* 连接特性
+* 3D图形效果特性
+
+#### 移动设备调试
+* 浏览器调试：chrome://inspect/#devices
+* 抓包：charles
+* 原生提供调试包
