--- a/doc/note/学习链接.md
+++ b/doc/note/学习链接.md
@@ -2,47 +2,48 @@
 
 ### 课程
 
-* [腾讯课堂](https://ke.qq.com/)
-* [网易云课堂](https://study.163.com/)
-* [慕课网](https://www.imooc.com/)
-* [51CTO学院](https://edu.51cto.com/)
-* [驰狼课堂](http://www.chilangedu.com/)
-* [freecodecamp](https://freecodecamp.cn/)
-* [leetcode](https://leetcode.com)
+- [腾讯课堂](https://ke.qq.com/)
+- [网易云课堂](https://study.163.com/)
+- [慕课网](https://www.imooc.com/)
+- [51CTO 学院](https://edu.51cto.com/)
+- [驰狼课堂](http://www.chilangedu.com/)
+- [freecodecamp](https://freecodecamp.cn/)
+- [leetcode](https://leetcode.com)
 
-### 社区
+### 社区博客
 
-* [前端开发博客](http://caibaojian.com/)
-* [牛客网](https://www.nowcoder.com)
-* [淘宝前端团队FED](http://taobaofed.org/)
-* [极客教程](https://www.geekjc.com/)
-* [伯乐在线](http://web.jobbole.com/)
-* [Google Developers](https://developers.google.com/)
-* [codereview](https://codereview.stackexchange.com/)
-* [stackoverflow](https://stackoverflow.com/)
-* [思否-segmentfault](https://segmentfault.com/)
-* [每日时报](https://wubaiqing.github.io/zaobao/)
-* [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
-* [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
+- [前端工程师手册](https://leohxj.gitbooks.io/front-end-database/index.html)
+- [前端开发博客](http://caibaojian.com/)
+- [牛客网](https://www.nowcoder.com)
+- [淘宝前端团队 FED](http://taobaofed.org/)
+- [极客教程](https://www.geekjc.com/)
+- [伯乐在线](http://web.jobbole.com/)
+- [Google Developers](https://developers.google.com/)
+- [codereview](https://codereview.stackexchange.com/)
+- [stackoverflow](https://stackoverflow.com/)
+- [思否-segmentfault](https://segmentfault.com/)
+- [每日时报](https://wubaiqing.github.io/zaobao/)
+- [阮一峰的网络日志](http://www.ruanyifeng.com/blog/archives.html)
+- [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 
 ### 技术
 
-* [w3c](https://www.w3.org)
-* [runoob](http://www.runoob.com/)
-* [MDN Web](https://developer.mozilla.org/zh-CN/docs/Web)
-* [es6](http://es6.ruanyifeng.com/)
-* [npm](https://www.npmjs.com/)
-* [github](https://github.com/)
-* [antd](http://ant.design/docs/react/introduce-cn)
-* [react](https://reactjs.org/)
-* [gitbook](https://docs.gitbook.com/)
-* [fabricjs](http://fabricjs.com/)
-* [weex](https://weex.apache.org/cn/index.html)
-* [electron](https://electronjs.org/)
-* [WebRTC](https://webrtc.org/)
-* [highlightjs](https://highlightjs.org/)
-* [chimee](https://chimee.org/)
-* [WebGL-3D-动画-threejs](https://threejs.org/)
-* [typescript](https://www.tslang.cn)
-* [前端资料](https://shimo.im/docs/VXEZSWMLxlw4XB2M/read)
-
+- [w3c](https://www.w3.org)
+- [runoob](http://www.runoob.com/)
+- [MDN Web](https://developer.mozilla.org/zh-CN/docs/Web)
+- [es6](http://es6.ruanyifeng.com/)
+- [npm](https://www.npmjs.com/)
+- [github](https://github.com/)
+- [antd](http://ant.design/docs/react/introduce-cn)
+- [react](https://reactjs.org/)
+- [gitbook](https://docs.gitbook.com/)
+- [fabricjs](http://fabricjs.com/)
+- [weex](https://weex.apache.org/cn/index.html)
+- [electron](https://electronjs.org/)
+- [WebRTC](https://webrtc.org/)
+- [highlightjs](https://highlightjs.org/)
+- [chimee](https://chimee.org/)
+- [WebGL-3D-动画-threejs](https://threejs.org/)
+- [typescript](https://www.tslang.cn)
+- [前端资料](https://shimo.im/docs/VXEZSWMLxlw4XB2M/read)
+- [JavaScript 教程](https://zh.javascript.info/)
