--- a/doc/note/摘录.md
+++ b/doc/note/摘录.md
@@ -42,3 +42,61 @@
 ```
 技术的未来发展，是我们可以去发出声音，去影响，乃至于去引领的。【为什么要关心标准（ES6）】
 ```
+
+* **35岁的程序员**
+```
+现在的我们何尝不是曾经的他们，现在的他们又何尝不是未来的我们
+其实好多人加班, 在干自己的事情, 并不是在加班，这种形式主义的病态现象很常见
+他们拉高了公司的开发成本，但却不如新人表现出来的冲劲
+```
+
+* **攀登者的足迹**
+```
+1.
+在每个人面前我都显得什么都不会，每件事情我都会拼尽全力去做（外面比别人厉害的人多了去了，我需要做的不是仰望着别人的背影，而是使自己强大起来变成别人仰望的对象）
+2.
+什么都想做，却什么都做不好（并不是想有多大的业绩，只是希望被团队需要，而不是多余的）
+3.
+工作态度是比工作能力更重要的事（哈哈哈，你调研的什么鬼，疏漏事小，不用心事大）
+4.
+团队内部没有合作，自己的任务由自己主导
+5.
+主动去判断一个任务的价值：对自身能力的提升、任务完成之后所带来的收益
+自身要有闪光点：自主学习、对职业道路有规划
+6.
+自己的任务只有自己清楚有多少工作量，把坑踩完之后，别人看到的只有“简单”
+7.
+有些人习惯回避问题，有些人习惯主动寻找问题
+8.
+呵，根本不会有人告诉你该怎么做，人家只是在催你进度而已（独立）
+需求改了都需要自己去发现（主动）
+9.
+不是去复制别人代码，而是把需要用到的技术学会之后自己去用
+10.
+大佬工作时间长是积极负责，你工作时间长是压力大效率低
+11.
+不要埋怨别人，其实是你自己没有做好，如果你能把他们需要的都直接在页面上反馈出来，他们就不会一直来问你了（前端不是满足用户需求，而是满足测试需求）
+12.
+很多创造API的人可能并没有写过真正的业务代码，他们真的懂程序员需要什么样的API吗
+13.
+能力、潜力、责任心
+14.
+我需要把自己往上提，才配成为你们的伙伴
+15.
+第三方库的异常自己要多考虑一步，代码添加异常防护
+16.
+前端代码没改动，但是依赖的后台服务有改动，这个时候需要通知测试，并且验证用到这个后台接口的所有前端页面正常
+17.
+能够做到将问题扼杀在摇篮里的才是真的大佬，能够发现并指出别人的隐藏问题（云效发布线上代码没有合并到master分支导致后面新建的变更没有发布最新代码）
+```
+
+* **前端如何在项目中做出亮点**
+```
+业务/技术思考 => 发现痛点 => 产出方案 => 拆解实现
+营销页每天换内容，怎么快速替换？
+营销部门人越来越多了，页面每天要10个，一个人怎么做得完？
+前端的人也越来越多了，改个组件不能只靠复制黏贴，怎么管理？
+拉新回流效率具体有多高？新人真的有买我们的商品吗？这么多人投入，都是要工资的，卖出去的商品能够发我们的工资吗？
+转化率低了，怎么才能提升？
+这个按钮写错个样式到了右边，居然点的人特别多？那下次是不是都应该放右边？
+```
