--- a/doc/note/知识扩展.md
+++ b/doc/note/知识扩展.md
@@ -65,3 +65,8 @@
     * 算法+数据结构：高时间复杂度和常见运行时（如O(N)和O(N Log N)的基本知识 冒泡排序、快速排序
     * 监控工具
 
+* 取消chrome浏览器跨域限制
+```
+open -a /Applications/Google\ Chrome.app --args --disable-web-security --user-data-dir=/Users/xmly/MyChromeDevUserData/
+```
+
